@startuml

entity User {
    + id : int <<PK>>
    --
    username : string
    passwordHash : string
    displayName : string
    role : string
    lastAccessed : timestamp
}

entity Tenant {
    + id : int <<PK>>
    --
    fullName : string
    phoneNumber : string
    originRegion : string
    isVerified : boolean
}

entity Room {
    + id : int <<PK>>
    --
    roomNumber : string
    roomType : string <<NOT NULL>>
    monthlyPrice : int
    isActive : boolean
}

entity Lease {
    + id : int <<PK>>
    --
    tenantId : int <<FK>>
    roomId : int <<FK>>
    startDate : timestamp
    endDate : timestamp
    isActive : boolean
}

entity Invoice {
    + id : int <<PK>>
    --
    leaseId : int <<FK>>
    amount : int
    dueDate : timestamp
    paidAt : timestamp
    duitkuReference : string
    callbackPayload : string
    status : string
    createdAt : timestamp
}

entity ChatbotMessage {
    + id : int <<PK>>
    --
    tenantId : int <<FK>>
    direction : string
    message : string
    sentAt : timestamp
}

entity Notification {
    + id : int <<PK>>
    --
    tenantId : int <<FK>>
    invoiceId : int <<FK>>
    chatbotMessageId : int <<FK>>
    type : string
    status : string
    createdAt : timestamp
}

entity AuditLog {
    + id : int <<PK>>
    --
    userId : int <<FK>>
    action : string
    tableName : string
    recordId : int
    details : json
    createdAt : timestamp
}

entity Complaint {
    + id : int <<PK>>
    --
    tenantId : int <<FK>>
    description : string
    status : string
    processedAt : timestamp
    resolvedBy : int <<FK>>
    resolveNotes : string
    resolvedAt : timestamp
    createdAt : timestamp
}

entity BotAuth {
    + key : string <<PK>>
    --
    value : string
}

' RELATIONSHIPS
Tenant ||--o{ Lease
Room ||--o{ Lease
Lease ||--o{ Invoice
Tenant ||--o{ ChatbotMessage
Tenant ||--o{ Notification
Invoice ||--o{ Notification
ChatbotMessage ||--o| Notification
Tenant ||--o{ Complaint
User ||--o{ Complaint : resolves
User ||--o{ AuditLog

@enduml